--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "build": "nodemon app.js"
+    "start": "node app.js",
+    "build": "node app.js"
   },
   "author": "",
   "license": "ISC",
